<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_practice</name>
  <version>0.1.0</version>
  <description>TurtleBot3 indoor navigation practice package for ROS 2 Humble and Nav2.</description>
  <maintainer email="user@example.com">nav2_practice</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>turtlebot3_navigation2</exec_depend>
  <exec_depend>turtlebot3_teleop</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
